# elara-api

./: Cargo.toml  Note.md  Readme.md
examples/: api-perf.rs
scripts/: Rocket.toml  config.toml  docker-compose.yml
src/: config.rs  error.rs  kafka.rs  lib.rs  main.rs  message.rs  route.rs  session.rs  util.rs  websocket.rs  websocket2.rs  websocket3.rs
src/config/: mod.rs  toml.rs
src/http/: actix_server.rs  curl.rs  mod.rs  request.rs  server.rs  validator.rs
src/kafka_api/: mod.rs
src/mq/: mod.rs  producer_smol.rs
src/rpc_api/: mod.rs  state.rs
src/ws/: relay.rs
