[package]
name = "elara-api"
version = "0.1.0"
authors = ["cyh"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = "2.33"
tokio = { version = "1.0", features = ["time", "full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
#url = "2.1"
#chrono = { version = "0.4", features = ["serde"] }
#crossbeam-channel = "0.5"
log = "0.4"
#simplelog = "0.8"
env_logger = "0.8"

# TODO:
#actix-web = { version = "4.0.0-beta.1", features = ["rustls"] }
#actix-web-actors = "4.0.0-beta.1"
#rustls = "0.19"
#actix-tls = "3.0.0-beta.2"
#actix = "0.11.0-beta.1"
jsonrpc-core = "16.0"
jsonrpc-pubsub = "16.0"
#jsonrpc-derive = "16.0"
#jsonrpc-core-client = "16.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.5"
tokio-tungstenite = "0.13.0"
crc = "1.0"

[[bin]]
name = "elara-api"
path = "bin/main.rs"

[[bin]]
name = "producer"
path = "bin/producer.rs"

[[bin]]
name = "consumer"
path = "bin/consumer.rs"