[package]
name = "elara-kv-component"
version = "0.1.0"
authors = ["yjhmelody <yjh465402634@gmail.com>"]
edition = "2018"

description = "Elara KV component for subscribing substrate node data"
keywords = ["kafka", "substrate", "websocket", "jsonrpc", "polkadot", "kusama"]
categories = ["web", "blockchain"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# TODO: wait for the new version rdkafka
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka.git", branch = "master", features = ["cmake-build"] }
log = "0.4"
env_logger = "0.8"
jsonrpc-core = "16.0"
jsonrpc-pubsub = "16.0"
thiserror = "1.0"
once_cell = "1.5"
tokio-tungstenite = "0.13"

#clap = "2.33"
#actix-web = { version = "4.0.0-beta.1", features = ["rustls"] }
#actix-web-actors = "4.0.0-beta.1"
#rustls = "0.19"
#actix-tls = "3.0.0-beta.2"
#actix = "0.11.0-beta.1"

[[bin]]
name = "elara-kv"
path = "bin/main.rs"

# Just for debug, remove them laterly.
[[bin]]
name = "producer"
path = "bin/producer.rs"

[[bin]]
name = "consumer"
path = "bin/consumer.rs"